The shared progress record reads a quest id under any casing, and a tally can be dropped outright
ZigProgressComponent's five quest maps keep the rule CounterMap keeps
for a tally: a read finds the entry under any casing (an exact hit
first), a write replaces whatever casing held it and files the entry as
the writer spelled it, a removal drops every spelling, knownQuestIds
lists each quest once, and trackedPins answers containsKey under any
casing; ZigQuestStore inherits it by delegation, so a record saved under
My_Quest keeps answering after a converter keys the quest my_quest, with
no migration. clearAchievementProgress(key) drops one raw tally and
says whether it was there: the accessor a consumer's re-key sweep uses
to retire a positional key once its tally has moved. ZigProgressComponentTest
gains three cases and ZigQuestStoreTest is new; 474 suites / 3479 tests
green. Held at 2.1.0, no version bump.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>